--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.545.0",
     "next": "^15.5.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-hook-form": "^7.65.0",
     "recharts": "^3.2.1",
     "resend": "^6.1.2",
